--- a/Ud4/Pract04 - frecuenciaNumeros/index.html
+++ b/Ud4/Pract04 - frecuenciaNumeros/index.html
@@ -7,7 +7,16 @@
     </head>
 
     <body>
-        
+        <h1>Frecuencias</h1>
+        <table>
+            <thead>
+                <tr>
+                    <th>Número</th>
+                    <th>Frecuencia</th>
+                </tr>
+            </thead>
+            <tbody id="frecuencia"></tbody>
+        </table>
         <script src="script.js"></script>
     </body>
 </html>
